WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258557
__builtin_popcount and __builtin_popcountll are not defined by MSVC
https://bugs.webkit.org/show_bug.cgi?id=258557
Summary
__builtin_popcount and __builtin_popcountll are not defined by MSVC
Hayashida Ryuichi
Reported
2023-06-27 03:32:20 PDT
__builtin_popcount and __builtin_popcountll are builtin functions provided by Clang and GCC, but MSVC doesn't provide the same function. Instead, __popcnt and __popcnt64 should be used when building WebKit for Windows.
https://learn.microsoft.com/en-us/cpp/intrinsics/popcnt16-popcnt-popcnt64?view=msvc-170
Attachments
Add attachment
proposed patch, testcase, etc.
Hayashida Ryuichi
Comment 1
2023-06-30 02:32:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15439
EWS
Comment 2
2023-06-30 06:49:27 PDT
Committed
265651@main
(4e7fe413ab40): <
https://commits.webkit.org/265651@main
> Reviewed commits have been landed. Closing PR #15439 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-30 06:50:17 PDT
<
rdar://problem/111567094
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug